<resources>
    <string name="app_name">OpenAthena™ for Android</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="action_demcache">Manage Digital Elevation Models</string>
    <string name="action_prefs">Settings</string>
    <string name="action_calculate">Calculate</string>
    <string name="action_about_openathena">About OpenAthena</string>
    <string name="action_settings">Settings</string>
    <string name="button_selectImage" translatable="false">🖼️</string>
    <string name="button_calculate" translatable="false">✉️</string>
    <string name="button_loadDEM" translatable="false">⛰️</string>
    <string name="text_view_value">ChangeMe</string>
    <string name="log_text_view_value">OpenAthena™ for Android . . . </string>
    <string name="test_button_text">Calculate</string>
    <string name="enter_host">Filename</string>
    <string name="finish_button_text">Back</string>
    <string name="save_prefs_text">💾</string>
    <string name="reset_prefs_text">Reset</string>
    <string name="are_you_sure_delete_map">Delete this elevation model?</string>
    <string name="title_activity_log">OpenAthena™ for Android Log</string>
    <string name="title_activity_prefs">OpenAthena™ for Android Settings</string>
    <string name="title_activity_about">About OpenAthena™ for Android</string>
    <string name="title_activity_demcache">Manage Elevation Models Cache</string>
    <string name="title_activity_newelevationmap">Add New Elevation Model</string>
    <string name="title_activity_managedems">Manage Elevation Models</string>
    <string name="title_activity_mapsdetail">Elevation Model Details</string>
    <string name="button_download_elevation_map">Download</string>
    <string name="button_import_elevation_map">Import DEM File</string>
    <string name="label_enter_coordinates">Enter center coordinates and h/w in meters:</string>
    <string name="button_manage_cache">Cached DEMs List</string>
    <string name="button_lookup_coordinates">Check Coverage in Cache</string>
    <string name="button_lookup_results">Lookup results</string>
    <string name="button_lookup_please_enter">Please enter coordinates in lat,lon or NATO MGRS format</string>
    <string name="button_lookup_no_data">No elevation data for the middle of the ocean!</string>
    <string name="button_lookup_nothing_found">Nothing found</string>
    <string name="hint_lat_lon_in_degrees">lat,lon or NATO MGRS</string>
    <string name="hint_fifteen_thousand_meters">15000 meters</string>
    <string name="download_succeeded">Download succeeded</string>
    <string name="download_failed">Download failed</string>
    <string name="lookup_nothing_found">No DEM found for coordinates</string>
    <string name="clear_button_text">Clear Log</string>
    <string name="openathena_for_android">OpenAthena™ for Android</string>
    <string name="software_license">software license</string>
    <string name="AboutSnippet"><![CDATA[<br>OpenAthena™ for Android is a project which allows common drones to spot precise geodetic locations<br>]]></string>
    <string name="about_software_libraries_used">Software libraries used:</string>
    <string name="AuthorGitHubSnippet"><![CDATA[<p><p><p><p>Project maintained by <a href=\"https://github.com/mkrupczak3\">mkrupczak3</a><br>]]></string>
    <string name="CallToActionSnippet"><![CDATA[View the project on GitHub</a><br>]]></string>
    <string name="bad_altitude_data_error_msg">ERROR: bad altitude or terrain data. This image is unusable. 🖼🚫🎯</string>
    <string name="target_found_at_msg">Target found at </string>
    <string name="drone_dist_to_target_msg">Distance to target:</string>
    <string name="resolveTarget_oob_error_msg">ERROR: resolveTarget ran OOB at</string>
    <string name="geotiff_coverage_reminder">Please ensure your DEM file covers the drone\'s location!</string>
    <string name="geotiff_coverage_precedent_message">Your DEM\'s coverage ⛰:\n</string>
    <string name="geotiff_load_reminder_msg">Could not resolve target. Please load a GeoTIFF Digital Elevation Model \".tif\" or DTED2 \".dt2\" file using ⛰ button\n</string>
    <string name="metadata_parse_error_msg">Unable to open image file to calculate. Drone image 🖼 metadata is either missing or unusable. Is this a drone image? \n</string>
    <string name="text_copied_to_clipboard_msg">Text copied to clipboard 📋</string>
    <string name="image_selected_msg">Selected 🖼 \n</string>
    <string name="dem_loaded_size_is_msg">loaded ⛰. Size </string>
    <string name="dem_load_error_generic_msg">ERROR: failed to load DEM, </string>
    <string name="dem_load_error_tiffexception_msg">ERROR: failed to load DEM, not a GeoTIFF \".tif\" or DTED2 \".dt2\" file.\n</string>
    <string name="calculating_target_msg">"Calculating 🧮: "</string>
    <string name="no_image_selected_error_msg">ERROR: Cannot calculate 🚫🧮: no image 🚫🖼 selected\n</string>
    <string name="opened_exif_for_image_msg">Opened EXIF for image\n</string>
    <string name="autel_accuracy_warning_msg">⚠️ DANGER: Autel drones have known accuracy problems ⚠️</string>
    <string name="i_understand_this_risk">I understand this risk</string>
    <string name="image_is_too_large_error_msg">Image is too large to show!</string>
    <string name="loading_geotiff_toast_msg">Loading DEM. Please wait…</string>
    <string name="dem_loading_finished_user_interaction_prompt">DEM loaded successfully! Tap anywhere within the image to calculate coordinates</string>
    <string name="wgs84_standard_lat_lon">WGS84 (Default)\nLat, Lon</string>
    <string name="wgs84_tooltip">The widely-used standard for describing a latitude longitude location on Earth</string>
    <string name="nato_mgrs_1m">NATO MGRS 1m</string>
    <string name="nato_mgrs_10m">NATO MGRS 10m</string>
    <string name="nato_mgrs_100m">NATO MGRS 100m</string>
    <string name="nato_mgrs_1m_tooltip">The NATO Military Grid Reference System standard. Describes a 1 meter² area of the Earth</string>
    <string name="nato_mgrs_10m_tooltip">The NATO Military Grid Reference System standard. Describes a 10 meter² area of the Earth</string>
    <string name="nato_mgrs_100m_tooltip">The NATO Military Grid Reference System standard. Describes a 100 meter² area of the Earth</string>
    <string name="ck_42_lat_lon">CK-42 Красовский\nLat, Lon</string>
    <string name="ck_42_geodetic_tooltip">An alternative geodetic system using the Krasovsky 1940 ellipsoid. Commonly used in former Warsaw pact countries</string>
    <string name="ck_42_gauss_kruger_n_e">CK-42 Красовский\nGauss-Krüger N, E</string>
    <string name="ck_42_gauss_kruger_tooltip">An alternative geodetic system using the Krasovsky 1940 ellipsoid. A Northing defined by X value, and Easting defined by Y value describe an exact position on Earth</string>
    <string name="target_output_mode_title">🎯 Output Settings:</string>
    <string name="gk_northing_text">Northing:</string>
    <string name="gk_easting_text">Easting:</string>
    <string name="gk_zone_text">ZONE:</string>
    <string name="attribute_text_drone_azimuth">Azimuth:</string>
    <string name="attribute_text_drone_camera_pitch">Pitch:</string>
    <string name="wgs84_ck42_conversion_fail_warning">⚠️WARNING: values are in WGS84, not CK-42 ⚠\n</string>
    <string name="missing_data_exception_latitude_error_msg">ERROR: Latitude metadata not found! This drone is incompatible with OpenAthena! 😭</string>
    <string name="missing_data_exception_longitude_error_msg">ERROR: Longitude metadata not found! This drone is incompatible with OpenAthena! 😭</string>
    <string name="missing_data_exception_altitude_error_msg">ERROR: Altitude metadata not found! This drone is incompatible with OpenAthena! 😭</string>
    <string name="missing_data_exception_altitude_absolute_reference">ERROR: This drone only provides altitude from launch point and is therefore incompatible with OpenAthena! 😭</string>
    <string name="missing_data_exception_azimuth_error_msg">ERROR: Azimuth metadata not found! This drone is incompatible with OpenAthena! 😭</string>
    <string name="missing_data_exception_theta_error_msg">ERROR: Camera Pitch metadata not found! This drone is incompatible with OpenAthena! 😭</string>
    <string name="missing_data_exception_roll">ERROR: Camera Roll metadata not found!</string>
    <string name="missing_data_exception_altitude_and_theta_error_msg">ERROR: Camera Pitch metadata found, but was invalid! This drone is incompatible with OpenAthena! 😭</string>
    <string name="latitude_label_short">lat</string>
    <string name="longitude_label_short">lon</string>
    <string name="altitude_label_short">Alt:</string>
    <string name="cot_remarks">Generated by OpenAthena for Android from sUAS data</string>
    <string name="version_word"> version </string>
    <string name="step_1_load_drone_image">Step 1: load a Drone Image. 🖼 \nA Digital Elevation Model (DEM) will automatically download for the surrounding ground terrain</string>
    <string name="step_2_press_calculate">Step 2: tap anywhere within the image to calculate ground coordinates</string>
    <string name="step_3_obtain_target">Step 3: obtain your target location below </string>
    <string name="wrong_filetype_toast_error_msg">ERROR: wrong filetype. Please select a GeoTIFF file ending in \".tif\" or DTED2 file ending in \".dt2\"</string>
    <string name="permissions_toast_success_msg">Permissions Granted</string>
    <string name="permissions_toast_error_msg">Failed to Obtain Necessary Permissions</string>
    <string name="latitude_label_long">Latitude :</string>
    <string name="longitude_label_long">Longitude :</string>
    <string name="altitude_label_long">Altitude :</string>
    <string name="latitude_wgs84_label_long">Latitude (WGS84): </string>
    <string name="longitude_wgs84_label_long">Longitude (WGS84): </string>
    <string name="altiude_wgs84_label_long">Altitude (WGS84): </string>
    <string name="roll_label">Camera Roll angle:</string>
    <string name="make_prefix_error_msg">ERROR: make </string>
    <string name="not_usable_at_this_time_error_msg">not usable at this time</string>
    <string name="parrot_model_prefix_error_msg">ERROR: Parrot model </string>
    <string name="xmp_missing_error_msg">ERROR: XMP metadata not found!</string>
    <string name="xmp_empty_error_msg">ERROR: XMP metadata found but was empty!</string>
    <string name="focal_length_label">Focal Length (pixels) : </string>
    <string name="azimuth_offset_label">Azimuth offset for selected point: </string>
    <string name="pitch_offset_label">Pitch offset for selected point: </string>
    <string name="isCameraModelRecognized">Is camera model recognized? :</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="title_activity_selection">Select a Target</string>
    <string name="geoid_load_error_msg">Critical Error: could not load Earth geoid datafile!</string>
    <string name="nato_vertical_datum_notice">NATO and WGS84 output vertical datum is EGM96 meters (or feet) above mean sea level.</string>
    <string name="prefs_compass_offset_label">Manual Azimuth Correction 🧭:</string>
    <string name="tooltip_correct_bad_compass_data_this_is_not_for_setting_mag_declination">Use this to correct bad compass data. This is NOT for setting magnetic declination!</string>
    <string name="href_obtain_an_api_key_here">Obtain An API Key Here</string>
    <string name="api_key_gibberish">e.g.: nlhhp3yd9ud54tr3eem4akqv49wcb23i</string>
    <string name="apply_changes_button_text">Apply</string>
    <string name="dem_api_key_status">API Key Status:</string>
    <string name="local_database_status">Local Database Status:</string>
    <string name="dronemodels_last_updated">Last Updated:</string>
    <string name="dronemodels_number_of_entries">Number of Entries:</string>
</resources>