<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/prefs_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:columnCount="2"
    android:rowCount="9">

    <TextView
        android:id="@+id/textViewOutputModeTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:text="@string/target_output_mode_title"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="?attr/actionMenuTextColor"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.532"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/outputModeRadioGroup"
        android:layout_width="249dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintTop_toBottomOf="@+id/textViewOutputModeTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <RadioButton
            android:id="@+id/radioButtonWGS84"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/wgs84_standard_lat_lon"
            android:textSize="20sp"
            android:tooltipText="@string/wgs84_tooltip" />

        <RadioButton
            android:id="@+id/radioButtonMGRS1m"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/nato_mgrs_1m"
            android:textSize="20sp"
            android:tooltipText="@string/nato_mgrs_1m_tooltip" />

        <RadioButton
            android:id="@+id/radioButtonMGRS10m"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/nato_mgrs_10m"
            android:textSize="20sp"
            android:tooltipText="@string/nato_mgrs_10m_tooltip" />

        <RadioButton
            android:id="@+id/radioButtonMGRS100m"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/nato_mgrs_100m"
            android:textSize="20sp"
            android:tooltipText="@string/nato_mgrs_100m_tooltip" />

        <RadioButton
            android:id="@+id/radioButtonCK42Geodetic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/ck_42_lat_lon"
            android:textSize="20sp"
            android:tooltipText="@string/ck_42_geodetic_tooltip" />

        <RadioButton
            android:id="@+id/radioButtonCK42GaussKrüger"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/ck_42_gauss_kruger_n_e"
            android:textSize="20sp"
            android:tooltipText="@string/ck_42_gauss_kruger_tooltip" />

    </RadioGroup>

    <TextView
        android:id="@+id/textViewUnitMeasurementTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="Distance Unit:"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="?attr/actionMenuTextColor"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/outputModeRadioGroup" />

    <RadioGroup
        android:id="@+id/measurementUnitRadioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:layout_editor_absoluteX="72dp"
        tools:layout_editor_absoluteY="493dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewUnitMeasurementTitle" >

        <RadioButton
            android:id="@+id/radioButtonMETER"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Meter" />

        <RadioButton
            android:id="@+id/radioButtonFOOT"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="US Foot" />
    </RadioGroup>

    <TextView
        android:id="@+id/compassCorrectionValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/prefs_compass_offset_label"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="?attr/actionMenuTextColor"
        android:textSize="18sp"
        android:tooltipText="@string/tooltip_correct_bad_compass_data_this_is_not_for_setting_mag_declination"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/measurementUnitRadioGroup" />

    <SeekBar
        android:id="@+id/compassCorrectionSeekBar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:max="200"
        android:progress="100"
        app:layout_constraintTop_toBottomOf="@+id/compassCorrectionValue"
        app:layout_constraintBottom_toTopOf="@+id/reset_prefs_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/reset_prefs_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="32dp"
        android:onClick="prefsReset"
        android:text="@string/reset_prefs_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/compassCorrectionSeekBar" />

</androidx.constraintlayout.widget.ConstraintLayout>
